// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/nuget getPkgReleases handles paginated results (v2) 1`] = `
Object {
  "pkgName": "nunit",
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
    Object {
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/nuget getPkgReleases processes real data (v2) 1`] = `
Object {
  "pkgName": "nunit",
  "releases": Array [
    Object {
      "version": "2.6.1",
    },
    Object {
      "version": "2.6.2",
    },
    Object {
      "version": "2.6.3",
    },
    Object {
      "version": "2.6.4",
    },
    Object {
      "version": "2.6.5",
    },
    Object {
      "version": "2.6.6",
    },
    Object {
      "version": "2.6.7",
    },
    Object {
      "version": "2.7.0",
    },
    Object {
      "version": "3.0.0-alpha",
    },
    Object {
      "version": "3.0.0-alpha-2",
    },
    Object {
      "version": "3.0.0-alpha-3",
    },
    Object {
      "version": "3.0.0-alpha-4",
    },
    Object {
      "version": "3.0.0-alpha-5",
    },
    Object {
      "version": "3.0.0-beta-1",
    },
    Object {
      "version": "3.0.0-beta-2",
    },
    Object {
      "version": "3.0.0-beta-3",
    },
    Object {
      "version": "3.0.0-beta-4",
    },
    Object {
      "version": "3.0.0-beta-5",
    },
    Object {
      "version": "3.0.0-rc",
    },
    Object {
      "version": "3.0.0-rc-2",
    },
    Object {
      "version": "3.0.0-rc-3",
    },
    Object {
      "version": "3.0.0",
    },
    Object {
      "version": "3.0.1",
    },
    Object {
      "version": "3.2.0",
    },
    Object {
      "version": "3.2.1",
    },
    Object {
      "version": "3.4.0",
    },
    Object {
      "version": "3.4.1",
    },
    Object {
      "version": "3.5.0",
    },
    Object {
      "version": "3.6.0",
    },
    Object {
      "version": "3.6.1",
    },
    Object {
      "version": "3.7.0",
    },
    Object {
      "version": "3.7.1",
    },
    Object {
      "version": "3.8.0",
    },
    Object {
      "version": "3.8.1",
    },
    Object {
      "version": "3.9.0",
    },
    Object {
      "version": "3.10.0",
    },
    Object {
      "version": "3.10.1",
    },
    Object {
      "version": "3.11.0",
    },
  ],
  "sourceUrl": "https://github.com/nunit/nunit",
}
`;

exports[`datasource/nuget getPkgReleases processes real data (v3) feed is a nuget.org 1`] = `
Object {
  "pkgName": "nunit",
  "releases": Array [
    Object {
      "version": "2.6.1",
    },
    Object {
      "version": "2.6.2",
    },
    Object {
      "version": "2.6.3",
    },
    Object {
      "version": "2.6.4",
    },
    Object {
      "version": "2.6.5",
    },
    Object {
      "version": "2.6.6",
    },
    Object {
      "version": "2.6.7",
    },
    Object {
      "version": "2.7.0",
    },
    Object {
      "version": "3.0.0",
    },
    Object {
      "version": "3.0.1",
    },
    Object {
      "version": "3.2.0",
    },
    Object {
      "version": "3.2.1",
    },
    Object {
      "version": "3.4.0",
    },
    Object {
      "version": "3.4.1",
    },
    Object {
      "version": "3.5.0",
    },
    Object {
      "version": "3.6.0",
    },
    Object {
      "version": "3.6.1",
    },
    Object {
      "version": "3.7.0",
    },
    Object {
      "version": "3.7.1",
    },
    Object {
      "version": "3.8.0",
    },
    Object {
      "version": "3.8.1",
    },
    Object {
      "version": "3.9.0",
    },
    Object {
      "version": "3.10.0",
    },
    Object {
      "version": "3.10.1",
    },
    Object {
      "version": "3.11.0",
    },
  ],
  "sourceUrl": "https://github.com/nunit/nunit",
}
`;

exports[`datasource/nuget getPkgReleases processes real data (v3) feed is not a nuget.org 1`] = `
Object {
  "pkgName": "nunit",
  "releases": Array [
    Object {
      "version": "2.6.1",
    },
    Object {
      "version": "2.6.2",
    },
    Object {
      "version": "2.6.3",
    },
    Object {
      "version": "2.6.4",
    },
    Object {
      "version": "2.6.5",
    },
    Object {
      "version": "2.6.6",
    },
    Object {
      "version": "2.6.7",
    },
    Object {
      "version": "2.7.0",
    },
    Object {
      "version": "3.0.0",
    },
    Object {
      "version": "3.0.1",
    },
    Object {
      "version": "3.2.0",
    },
    Object {
      "version": "3.2.1",
    },
    Object {
      "version": "3.4.0",
    },
    Object {
      "version": "3.4.1",
    },
    Object {
      "version": "3.5.0",
    },
    Object {
      "version": "3.6.0",
    },
    Object {
      "version": "3.6.1",
    },
    Object {
      "version": "3.7.0",
    },
    Object {
      "version": "3.7.1",
    },
    Object {
      "version": "3.8.0",
    },
    Object {
      "version": "3.8.1",
    },
    Object {
      "version": "3.9.0",
    },
    Object {
      "version": "3.10.0",
    },
    Object {
      "version": "3.10.1",
    },
    Object {
      "version": "3.11.0",
    },
  ],
  "sourceUrl": "https://github.com/nunit/nunit",
}
`;

exports[`datasource/nuget getPkgReleases processes real data with no github project url (v2) 1`] = `
Object {
  "pkgName": "nunit",
  "releases": Array [
    Object {
      "version": "3.11.0",
    },
  ],
  "sourceUrl": "https://nunit.org",
}
`;

exports[`datasource/nuget getPkgReleases processes real data with no github project url (v3) 1`] = `
Object {
  "pkgName": "nunit",
  "releases": Array [],
  "sourceUrl": "https://nunit.org",
}
`;

exports[`datasource/nuget getPkgReleases processes real data without project url (v2) 1`] = `
Object {
  "pkgName": "nunit",
  "releases": Array [
    Object {
      "version": "2.6.1",
    },
    Object {
      "version": "2.6.2",
    },
    Object {
      "version": "2.6.3",
    },
    Object {
      "version": "2.6.4",
    },
    Object {
      "version": "2.6.5",
    },
    Object {
      "version": "2.6.6",
    },
    Object {
      "version": "2.6.7",
    },
    Object {
      "version": "2.7.0",
    },
    Object {
      "version": "3.0.0-alpha",
    },
    Object {
      "version": "3.0.0-alpha-2",
    },
    Object {
      "version": "3.0.0-alpha-3",
    },
    Object {
      "version": "3.0.0-alpha-4",
    },
    Object {
      "version": "3.0.0-alpha-5",
    },
    Object {
      "version": "3.0.0-beta-1",
    },
    Object {
      "version": "3.0.0-beta-2",
    },
    Object {
      "version": "3.0.0-beta-3",
    },
    Object {
      "version": "3.0.0-beta-4",
    },
    Object {
      "version": "3.0.0-beta-5",
    },
    Object {
      "version": "3.0.0-rc",
    },
    Object {
      "version": "3.0.0-rc-2",
    },
    Object {
      "version": "3.0.0-rc-3",
    },
    Object {
      "version": "3.0.0",
    },
    Object {
      "version": "3.0.1",
    },
    Object {
      "version": "3.2.0",
    },
    Object {
      "version": "3.2.1",
    },
    Object {
      "version": "3.4.0",
    },
    Object {
      "version": "3.4.1",
    },
    Object {
      "version": "3.5.0",
    },
    Object {
      "version": "3.6.0",
    },
    Object {
      "version": "3.6.1",
    },
    Object {
      "version": "3.7.0",
    },
    Object {
      "version": "3.7.1",
    },
    Object {
      "version": "3.8.0",
    },
    Object {
      "version": "3.8.1",
    },
    Object {
      "version": "3.9.0",
    },
    Object {
      "version": "3.10.0",
    },
    Object {
      "version": "3.10.1",
    },
    Object {
      "version": "3.11.0",
    },
  ],
}
`;

exports[`datasource/nuget getPkgReleases processes real data without project url (v3) 1`] = `
Object {
  "pkgName": "nunit",
  "releases": Array [
    Object {
      "version": "2.6.1",
    },
    Object {
      "version": "2.6.2",
    },
    Object {
      "version": "2.6.3",
    },
    Object {
      "version": "2.6.4",
    },
    Object {
      "version": "2.6.5",
    },
    Object {
      "version": "2.6.6",
    },
    Object {
      "version": "2.6.7",
    },
    Object {
      "version": "2.7.0",
    },
    Object {
      "version": "3.0.0",
    },
    Object {
      "version": "3.0.1",
    },
    Object {
      "version": "3.2.0",
    },
    Object {
      "version": "3.2.1",
    },
    Object {
      "version": "3.4.0",
    },
    Object {
      "version": "3.4.1",
    },
    Object {
      "version": "3.5.0",
    },
    Object {
      "version": "3.6.0",
    },
    Object {
      "version": "3.6.1",
    },
    Object {
      "version": "3.7.0",
    },
    Object {
      "version": "3.7.1",
    },
    Object {
      "version": "3.8.0",
    },
    Object {
      "version": "3.8.1",
    },
    Object {
      "version": "3.9.0",
    },
    Object {
      "version": "3.10.0",
    },
    Object {
      "version": "3.10.1",
    },
    Object {
      "version": "3.11.0",
    },
  ],
}
`;
